#25: Adding homepage url and programming language as component fields

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                                     <label>Copyright</label>
                                     <select data-hide-on-select="true" class="form-control" id="select-copyright" type="text"></select>
                                 </fieldset>
+                                 <fieldset class="form-group">
+                                    <label>Programming Language</label>
+                                    <select data-hide-on-select="true" class="form-control" id="select-language" type="text"></select>
+                                </fieldset>
+                                 <fieldset class="form-group">
+                                    <label>Homepage URL</label>
+                                    <input type="text" class="form-control" id="component-homepage-url" placeholder="Enter Homepage URL">
+                                </fieldset>
                                 <fieldset class="form-group">
                                     <label for="component-notes">Notes</label>
                                     <textarea class="form-control" id="component-notes" rows="3"></textarea>
