--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <script src="assets/js/export-to-dejacode.js"></script>
     <script src="assets/js/nodeview.js"></script>
     <script src="assets/js/select2.js"></script>
+    <script src="http://1000hz.github.io/bootstrap-validator/dist/validator.min.js"></script>
+
 </head>
 <body>
 <div class="row">
@@ -88,7 +90,7 @@
         <table id="clues-table" class="display table table-striped table-bordered dataTable no-footer"  cellspacing="0" width="100%" >
         </table>
         <div id="component-container">
-            <p class="lead text-center">Component Summary</p>
+            <p class="lead">Component Summary</p>
             <table id="components-table" class="display table table-striped table-bordered dataTable no-footer"  cellspacing="0" width="100%" >
             </table>
         </div>
@@ -173,16 +175,16 @@
                             <div class="form-group">
                                 <h4>Product Information</h4>
                                 <p> Enter the Product Name and Version you want the components to be added to</p>
-                                <input type="text" class="form-control" id="product-name" placeholder="Product Name" required>
-                                <input type="text" class="form-control" id="product-version" placeholder="Product Version" required>
+                                <input type="text" class="form-control" id="product-name" placeholder="Product Name" required size="26">
+                                <input type="text" class="form-control" id="product-version" placeholder="Product Version" required size="26">
 
                                 <h4>DejaCode API URL</h4>
-                                <p> Enter the URL (For example, https://enterprise.dejacode.com)</p>
-                                <input type="text" class="form-control" id="api-url" placeholder="DejaCode API URL" required>
+                                <p> Enter the URL (For example, https://enterprise.dejacode.com/api/v2/product_components/)</p>
+                                <input type="text" class="form-control" id="api-url" placeholder="DejaCode API URL" required size="76">
 
                                 <h4>Please provide your API key</h4>
                                 <p> Your API key can be found in your DejaCode Profile Settings</p>
-                                <input type="password" class="form-control" id="export-input" placeholder="DejaCode API Key" required>
+                                <input type="password" class="form-control" id="export-input" placeholder="DejaCode API Key" required size="76">
                             </div>
                         </form>
                     </div>
