#28: Moved submit buttons to modal footer section. Added success and error messages on submit with product component api

--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
                                 <input type="password" class="form-control" id="apiKey" name="api" placeholder="DejaCode API Key" required>
                                 <small><em>Your API key can be found in your DejaCode Profile Settings</em></small>
                             </div>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary" id="componentSubmit">Submit</button>
                         </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary" id="componentSubmit">Submit</button>
                     </div>
                 </div>
              </div>
