#28: Made the API URL an input for product component import.

--- a/index.html
+++ b/index.html
@@ -178,9 +178,13 @@
                                 <label for="product-version">Product Version</label>
                                 <input type="text" class="form-control" id="product-version" name="version" placeholder="Product Version" required>
                             </div>
-
+                            <div class="form-group" id="apiURL">
+                                <label for="apiURLDejaCode">DejaCode API URL</label>
+                                <input type="text" class="form-control" id="apiURLDejaCode" name="version" placeholder="DejaCode API URL" required>
+                                <small><em>Enter the Product Component API URL (For example, https://enterprise.dejacode.com/api/v2/product_components/).</em></small>
+                            </div>
                             <div class="form-group" id="api">
-                                <label for="apiKey">API Key</label>
+                                <label for="apiKey">DejaCode API Key</label>
                                 <input type="password" class="form-control" id="apiKey" name="api" placeholder="DejaCode API Key" required>
                                 <small><em>Your API key can be found in your DejaCode Profile Settings</em></small>
                             </div>
