#32: added missing class which hides other views besides the table view

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div id="tabbar" class="col-md-9">
         <table id="clues-table" class="display table table-striped table-bordered dataTable no-footer"  cellspacing="0" width="100%" >
         </table>
-        <div id="component-container">
+        <div id="component-container" class="node-hide">
             <p class="lead">Component Summary</p>
             <table id="components-table" class="display table table-striped table-bordered dataTable no-footer"  cellspacing="0" width="100%" >
             </table>
