#31: Separated database code to aboutCodeDB.js

--- a/index.html
+++ b/index.html
@@ -307,5 +307,6 @@
 <script src="assets/js/jstree.min.js"></script>
 <script src="assets/js/scandata.js"></script>
 <script src="assets/js/scancode.js"></script>
+<script src="assets/js/aboutCodeDB.js"></script>
 </body>
 </html>
