--- a/index.html
+++ b/index.html
@@ -308,5 +308,6 @@
 <script src="assets/js/scandata.js"></script>
 <script src="assets/js/scancode.js"></script>
 <script src="assets/js/aboutCodeDB.js"></script>
+<script src="assets/js/nodeViewDB.js"></script>
 </body>
 </html>
