#39: Moved node view code from scancode.js to aboutCodeNodeView.js

--- a/index.html
+++ b/index.html
@@ -309,5 +309,6 @@
 <script src="assets/js/scancode.js"></script>
 <script src="assets/js/aboutCodeDB.js"></script>
 <script src="assets/js/nodeViewDB.js"></script>
+<script src="assets/js/aboutCodeNodeView.js"></script>
 </body>
 </html>
