#39: Moved/refactored DataTables code from scancode.js to aboutCodeDataTables.js

--- a/index.html
+++ b/index.html
@@ -310,5 +310,7 @@
 <script src="assets/js/aboutCodeDB.js"></script>
 <script src="assets/js/nodeViewDB.js"></script>
 <script src="assets/js/aboutCodeNodeView.js"></script>
+<script src="assets/js/aboutCodeDataTables.js"></script>
+
 </body>
 </html>
