#39: Renamed scancode.js to renderer.js

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 </div>
 <script src="assets/js/jstree.min.js"></script>
 <script src="assets/js/scandata.js"></script>
-<script src="assets/js/scancode.js"></script>
+<script src="assets/js/renderer.js"></script>
 <script src="assets/js/aboutCodeDB.js"></script>
 <script src="assets/js/nodeViewDB.js"></script>
 <script src="assets/js/aboutCodeNodeView.js"></script>
