#39: Refactored Component DataTable into its own file

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 <script src="assets/js/nodeViewDB.js"></script>
 <script src="assets/js/aboutCodeNodeView.js"></script>
 <script src="assets/js/aboutCodeDataTables.js"></script>
+<script src="assets/js/componentDataTables.js"></script>
 
 </body>
 </html>
