#39: Fixed component summary table. * Needed to covert the component table to be flat to make updating nested values (e.g. license short_names) easier.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                     <button class="btn btn-sidebar" id="save-file" data-toggle="tooltip" title="Export file"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                 </li>
                 <li>
-                    <button class="btn btn-sidebar" id="show-datatable" data-toggle="tooltip" title="Table view"><i class="fa fa-table" aria-hidden="true"></i></button>
+                    <button class="btn btn-sidebar" id="show-clue-table" data-toggle="tooltip" title="Table view"><i class="fa fa-table" aria-hidden="true"></i></button>
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="show-tree" data-toggle="tooltip" title="Conclusions view"><i class="fa fa-code-fork" aria-hidden="true"></i></button>
                 </li>
                 <li>
-                    <button class="btn btn-sidebar" id="table-test" data-toggle="modal" data-placement="right" title="Import Components to DejaCode"><i class="fa fa-list-ol" aria-hidden="true"></i></button>
+                    <button class="btn btn-sidebar" id="show-component-table" data-toggle="modal" data-placement="right" title="Import Components to DejaCode"><i class="fa fa-list-ol" aria-hidden="true"></i></button>
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="show-help" data-toggle="modal" data-placement="right" title="Help with Application" data-target="#helpModal"><i class="fa fa-question" aria-hidden="true"></i></button>
