--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li>
-                    <button class="btn btn-sidebar" id="open-file" data-toggle="tooltip" title="Import file"><i class="fa fa-folder-open-o" aria-hidden="true"></i></button>
+                    <button class="btn btn-sidebar" id="open-file" data-toggle="tooltip" title="Open file"><i class="fa fa-folder-open-o" aria-hidden="true"></i></button>
                 </li>
                 <li>
-                    <button class="btn btn-sidebar" id="save-file" data-toggle="tooltip" title="Export file"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+                    <button class="btn btn-sidebar" id="save-file" data-toggle="tooltip" title="Save file"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="show-clue-table" data-toggle="tooltip" title="Table view"><i class="fa fa-table" aria-hidden="true"></i></button>
@@ -76,6 +76,12 @@
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="show-help" data-toggle="modal" data-placement="right" title="Help with Application" data-target="#helpModal"><i class="fa fa-question" aria-hidden="true"></i></button>
+                </li>
+                <li>
+                    <button class="btn btn-sidebar" id="import-json-file" data-toggle="tooltip" title="Import JSON file"><i class="fa fa-download" aria-hidden="true"></i></button>
+                </li>
+                <li>
+                    <button class="btn btn-sidebar" id="export-json-file" data-toggle="tooltip" title="Export JSON File"><i class="fa fa-upload" aria-hidden="true"></i></button>
                 </li>
             </ul>
         </div>
@@ -304,9 +310,11 @@
         </div>
     </div>
 </div>
+<script>
+    require('./assets/js/renderer.js');
+</script>
 <script src="assets/js/jstree.min.js"></script>
 <script src="assets/js/scandata.js"></script>
-<script src="assets/js/renderer.js"></script>
 <script src="assets/js/aboutCodeDB.js"></script>
 <script src="assets/js/aboutCodeNodeView.js"></script>
 <script src="assets/js/aboutCodeDataTables.js"></script>
