#39: Added back component field suggestions in dialog * Added suggestions selection for component Homepage URL * Removed unused model definition
- Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 </fieldset>
                                  <fieldset class="form-group">
                                     <label>Homepage URL</label>
-                                    <input type="text" class="form-control" id="component-homepage-url" placeholder="Enter Homepage URL">
+                                    <select data-hide-on-select="true" class="form-control" id="component-homepage-url" type="text"></select>
                                 </fieldset>
                                 <fieldset class="form-group">
                                     <label for="component-notes">Notes</label>
