Refactor code for open-SQLite function #75
  * Create new open-SQLite function.
  * Modified button-click event to call refactored function.
  * Modified ipcRenderer to call refactored function.
  * Modified button-click event name, related constant name and button
    title to be consistent with custom menu naming conventions.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li>
-                    <button class="btn btn-sidebar" id="open-file" data-toggle="tooltip" title="Open file"><i class="fa fa-folder-open-o" aria-hidden="true"></i></button>
+                    <button class="btn btn-sidebar" id="open-file" data-toggle="tooltip" title="Open SQLite File"><i class="fa fa-folder-open-o" aria-hidden="true"></i></button>
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="save-file" data-toggle="tooltip" title="Save file"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
