--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-danger" data-dismiss="modal" id="delete-component">Delete Component</button>
                             <button type="button" class="btn btn-primary" id="save-component">Save changes</button>
                         </div>
                     </div>
