Add 'Component Summary View' to custom menu #85
  * Added 'Component Summary View' to 'View' menu item.
  * Added keyboard shortcut.
  * Refactored related function/button.click code.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <button class="btn btn-sidebar" id="show-tree" data-toggle="tooltip" title="Node View"><i class="fa fa-code-fork" aria-hidden="true"></i></button>
                 </li>
                 <li>
-                    <button class="btn btn-sidebar" id="show-component-table" data-toggle="modal" data-placement="right" title="Import Components to DejaCode"><i class="fa fa-list-ol" aria-hidden="true"></i></button>
+                    <button class="btn btn-sidebar" id="show-component-table" data-toggle="modal" data-placement="right" title="Component Summary View"><i class="fa fa-list-ol" aria-hidden="true"></i></button>
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="show-help" data-toggle="modal" data-placement="right" title="Help with Application" data-target="#helpModal"><i class="fa fa-question" aria-hidden="true"></i></button>
