Added database creation indicator #87
* Added indicator to show database is being created when initially
  loading a JSON file

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
             </ul>
         </div>
     </div>
+    <div id="indicator-text"><h4>Creating Database ...</h4></div>
+    <div id="db-indicator"></div>
     <div class="col-md-2" id="leftCol">
         <div id="jstree"></div>
     </div>
