Refactor bar chart setup into a class  #133
* Created AboutCodeBarChart class
* Added support for Copyright attributes

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <script src="assets/js/export-to-dejacode.js"></script>
     <script src="assets/js/nodeview.js"></script>
     <script src="assets/js/select2.js"></script>
-    <script src="assets/js/bar-chart.js"></script>
+    <script src="assets/js/barChart.js"></script>
+    <script src="assets/js/aboutCodeBarChart.js"></script>
 </head>
 <body>
 <div class="row">
@@ -178,7 +179,7 @@
 
         <!-- Bar Charts -->
         <div class="bar-chart-hide" id="bar-chart-container">
-            <svg class="bar-chart"></svg>
+            <svg class="bar-chart" id="summary-bar-chart"></svg>
         </div>
 
         <!--Component Modal -->
