Integrate splitter to resize views #21
  * Added the splitter.
  * Fixed the re-positioned sidebar.
  * Removed the unwanted horizontal scrollbar from the bottom of
    the screen.
  * Made the jsTree full-height.
  * Note: For some reason, this work also resulted in numerous changes
    to npm-shrinkwrap.json.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
     <script src="assets/js/export-to-dejacode.js"></script>
     <script src="assets/js/nodeview.js"></script>
     <script src="assets/js/select2.js"></script>
+    <script src='node_modules/split.js/split.js'></script>
 </head>
 <body>
-<div class="row">
-    <div class="col-md-1">
+<div class="row root-div" id="root-div">
+    <div class="split split-horizontal col-md-1" id="sidebar-div">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
@@ -82,11 +83,11 @@
     </div>
     <div id="indicator-text"><h4>Creating Database ...</h4></div>
     <div id="db-indicator"></div>
-    <div class="col-md-2" id="leftCol">
-        <div id="jstree"></div>
+    <div class="split split-horizontal col-md-2" id="leftCol">
+         <div id="jstree"></div>
     </div>
 
-    <div id="tabbar" class="col-md-9">
+    <div id="tabbar" class="split split-horizontal col-md-9">
         <table id="clues-table" class="display table table-striped table-bordered dataTable no-footer"  cellspacing="0" width="100%" >
         </table>
         <div id="component-container" class="node-hide">
