Add select2 box with additional attributes #133
* Add select2 select box with attribute groups
* Add additional attributes as options to display in bar chart
  (i.e. file and package information)

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
         </div>
 
         <!-- Bar Charts -->
-        <div class="bar-chart-hide" id="bar-chart-container">
+        <div class="hide-container" id="bar-chart-container">
+            <select data-hide-on-select="true" class="form-control select-chart-attribute" id="select-chart-attribute" type="text"></select>
             <svg class="bar-chart" id="summary-bar-chart"></svg>
         </div>
 
