Save splitter widths in localStorage #21
  * Splitter div-width setting is now stored as JSON in localStorage.
  * We now display the Component Summary table at full (or near full)
    width and restore the user’s resizing of the Tree and Table/Node
    views when the user returns to those views.
  * Any saved splitter div-width setting is cleared from localStorage
    when the app closes.
  * The splitter gutter is no longer visible in Component Summary view.
  * The jsTree is now slightly closer to the top border of its
    container.
  * split.js has been copied to assets/js/.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <script src="assets/js/export-to-dejacode.js"></script>
     <script src="assets/js/nodeview.js"></script>
     <script src="assets/js/select2.js"></script>
-    <script src='node_modules/split.js/split.js'></script>
+    <script src='assets/js/split.js'></script>
 </head>
 <body>
 <div class="row root-div" id="root-div">
-    <div class="split split-horizontal col-md-1" id="sidebar-div">
+        <div class="split split-horizontal col-md-1" id="sidebar-div">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
@@ -87,10 +87,10 @@
          <div id="jstree"></div>
     </div>
 
-    <div id="tabbar" class="split split-horizontal col-md-9">
+     <div id="tabbar" class="split split-horizontal col-md-9">
         <table id="clues-table" class="display table table-striped table-bordered dataTable no-footer"  cellspacing="0" width="100%" >
         </table>
-        <div id="component-container" class="node-hide">
+         <div id="component-container" class="node-hide">
             <p class="lead">Component Summary</p>
             <table id="components-table" class="display table table-striped table-bordered dataTable no-footer"  cellspacing="0" width="100%" >
             </table>
