Add Total Files Scanned to chart summary #133
* Update Total Files Scanned value when a new JSON file is imported
* Removed unused methods
* Fixed ScanCode Model definition for files_count

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
         <!-- Bar Charts -->
         <div class="hide-container" id="bar-chart-container">
             <select data-hide-on-select="true" class="form-control select-chart-attribute" id="select-chart-attribute" type="text"></select>
+            <h5>Total Files Scanned: <span class="total-files"></span></h5>
             <svg class="bar-chart" id="summary-bar-chart"></svg>
         </div>
 
