Rename title for bar chart summary view #133
* Move chart summary view icon location on sidebar

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                     <button class="btn btn-sidebar" id="save-file" data-toggle="tooltip" title="Save SQLite File"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                 </li>
                 <li>
+                    <button class="btn btn-sidebar" id="show-bar-chart" data-toggle="tooltip" data-placement="right" title="Chart Summary View"><i class="fa fa-bar-chart" aria-hidden="true"></i></button>
+                </li>
+                <li>
                     <button class="btn btn-sidebar" id="show-clue-table" data-toggle="tooltip" title="Table View"><i class="fa fa-table" aria-hidden="true"></i></button>
                 </li>
                 <li>
@@ -75,9 +78,6 @@
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="show-component-table" data-toggle="modal" data-placement="right" title="Component Summary View"><i class="fa fa-list-ol" aria-hidden="true"></i></button>
-                </li>
-                <li>
-                    <button class="btn btn-sidebar" id="show-bar-chart" data-toggle="tooltip" data-placement="right" title="License and Copyright Summary"><i class="fa fa-bar-chart" aria-hidden="true"></i></button>
                 </li>
                 <li>
                     <button class="btn btn-sidebar" id="show-help" data-toggle="modal" data-placement="right" title="Help with Application" data-target="#helpModal"><i class="fa fa-question" aria-hidden="true"></i></button>
