--- a/index.html
+++ b/index.html
@@ -111,20 +111,19 @@
         <div id="tabbar" class="split split-horizontal">
 
             <!-- Clue DataTable Tab-->
-            <div id="clues-container" class="container">
+            <div class="container" id="clues-container">
                 <table id="clues-table" class="display table table-striped table-bordered dataTable no-footer" cellspacing="0" width="100%" >
                 </table>
             </div>
 
             <!-- Component DataTable Tab -->
-            <div id="component-container" class="container hide-container">
-                <p class="lead">Component Summary</p>
+            <div class="container" id="component-container">
                 <table id="components-table" class="display table table-striped table-bordered dataTable no-footer" cellspacing="0" width="100%" >
                 </table>
             </div>
 
             <!-- Node View Tab -->
-            <div class="hide-container" id="node-container">
+            <div id="node-container">
                 <select id="node-drop-down" style="border-color: #eee; border-radius: 5px; padding: 5px;" multiple>
                     <option value="filename" selected>File Name</option>
                     <option value="license">License</option>
@@ -142,7 +141,7 @@
             </div>
 
             <!-- Bar Chart Tab -->
-            <div class="hide-container" id="bar-chart-container">
+            <div id="bar-chart-container">
                 <select data-hide-on-select="true" class="form-control select-chart-attribute" id="select-chart-attribute" type="text"></select>
                 <h5>Total Files Scanned: <span class="total-files"></span></h5>
                 <svg class="bar-chart" id="summary-bar-chart"></svg>
