Update styles for sidebar, jstree, & splitter #148
* Added container class to Node View and Bar Chart Summary View
* Removed jstree border and changed background color of jstree
* Added box shadow to leftCol
* Changed sidebar background and icon colors
* Changed splitter cursor to col-resize

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
 
             <!-- Node View Tab -->
-            <div id="node-container">
+            <div class="container" id="node-container">
                 <select id="node-drop-down" style="border-color: #eee; border-radius: 5px; padding: 5px;" multiple>
                     <option value="filename" selected>File Name</option>
                     <option value="license">License</option>
@@ -141,7 +141,7 @@
             </div>
 
             <!-- Bar Chart Tab -->
-            <div id="bar-chart-container">
+            <div class="container" id="bar-chart-container">
                 <select data-hide-on-select="true" class="form-control select-chart-attribute" id="select-chart-attribute" type="text"></select>
                 <h5>Total Files Scanned: <span class="total-files"></span></h5>
                 <svg class="bar-chart" id="summary-bar-chart"></svg>
