Fix jstree issue when window is resized #148
* Initially the jstree window width was based off percentages which
  would resize the window as it was expanded or collapsed. To fix this
  I switched from percentages to pixels.
* In addition, to allow the tabbar window to expand correctly I
  switched to using a flex box.

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
     <div id="root-div">
 
         <!-- JsTree -->
-        <div class="split split-horizontal" id="leftCol">
+        <div class="split split-flex" id="leftCol">
              <div id="jstree"></div>
         </div>
 
         <!-- Tab Bar -->
-        <div id="tabbar" class="split split-horizontal">
+        <div class="split split-flex" id="tabbar">
 
             <!-- Clue DataTable Tab-->
             <div class="container" id="clues-container">
