Change description of Save function #126
Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </button>
             </li>
             <li>
-                <button class="btn btn-sidebar" id="save-file" data-toggle="tooltip" title="Save SQLite File">
+                <button class="btn btn-sidebar" id="save-file" data-toggle="tooltip" title="Save As New SQLite File">
                     <i class="fa fa-floppy-o" aria-hidden="true"></i>
                 </button>
             </li>
