Update pruneNodes to hide NR status #117
* Update Review Status values
* Add Not Reporting Status #116

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -166,9 +166,10 @@
                         <fieldset class="form-group">
                             <label for="select-status">Status</label>
                             <select class="form-control" id="select-status" type="text">
-                                <option value="analyzed">Analyzed</option>
-                                <option value="attention">Needs Attention</option>
-                                <option value="original">Original Code</option>
+                                <option value="Analyzed">Analyzed</option>
+                                <option value="Attention">Needs Attention</option>
+                                <option value="Original">Original Code</option>
+                                <option value="NR">Not Reporting</option>
                             </select>
                         </fieldset>
                         <fieldset class="form-group">
