Add ability to select display by status #117
* Add select2 bar to select which statuses are shown
* When a status is selected, remove those nodes from the node view
  and when deselected add them back.

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                     <option value="license">License</option>
                     <option value="copyright">Copyright</option>
                 </select>
+                <fieldset>
+                    <select id="status-drop-down" data-hide-on-select="true" style="border-color: #eee; border-radius: 5px; padding: 5px;" multiple>
+                        <option value="Analyzed">Analyzed</option>
+                        <option value="Attention">Needs Attention</option>
+                        <option value="Original">Original Code</option>
+                        <option value="NR">Not Reporting</option>
+                    </select>
+                </fieldset>
                 <div id="nodeview-container">
                     <div id="zoom-controls">
                         <button class="btn btn-zoom" id="reset-zoom" type="button">
